--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -59,7 +59,21 @@ header{
     color: white;
     font-size: 18px;
 }
-
+.textButton{
+    margin-top: 70px;
+    margin-left: 60px;
+    
+}
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+ 
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
 
 /*---------*/
 
